// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown renders code block 1`] = `
<div
  className="css-1u5zjlz"
>
  <pre
    className="css-1spfbkh"
  >
    <button
      className="css-1wgtjha"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onScroll={[Function]}
      placement="top"
      type="button"
    >
      <svg
        className="css-1jsrbro"
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#icon-copy"
        />
      </svg>
    </button>
    <code
      className="css-rt1r54"
    >
      Code block
    </code>
  </pre>
</div>
`;

exports[`Markdown renders code inline 1`] = `
<div
  className="css-1u5zjlz"
>
  <p
    className="css-1eitoz7"
  >
    <code
      className="css-rt1r54"
    >
      Code line
    </code>
  </p>
</div>
`;

exports[`Markdown renders mixed content 1`] = `
<div
  className="css-1u5zjlz"
>
  <div>
    <h2
      className="css-v70fzj"
      id="connect-to-tarantool-cartridge-using-python-clienthttpsgithubcomtarantooltarantool-python"
    >
      Connect to Tarantool Cartridge using 
      <a
        className="css-n4diq8"
        href="https://github.com/tarantool/tarantool-python"
        target="_blank"
      >
        python client
      </a>
    </h2>
    <p
      className="css-1eitoz7"
    >
      First, 
      <strong>
        install
      </strong>
       
      <em>
        tarantool
      </em>
       package using 
      <em>
        pip3
      </em>
      :
    </p>
    <pre
      className="css-1spfbkh"
    >
      <button
        className="css-1wgtjha"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="css-1jsrbro"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <code
        className="language-bash css-fkp2zu"
      >
        pip3 install tarantool
      </code>
    </pre>
    <p
      className="css-1eitoz7"
    >
      Create a file example.py with the code to get started:
    </p>
    <pre
      className="css-1spfbkh"
    >
      <button
        className="css-1wgtjha"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="css-1jsrbro"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <code
        className="language-python css-fkp2zu"
      >
        from tarantool import Connection
c = Connection(
    "try-cartridge.tarantool.io", 
    10300, 
    user='admin', 
    password='npngatmwsf'
)
result = c.insert("examples", (333, 'Value', 'Value'))
space = c.space("examples")
results = space.select(333)
print(results)
      </code>
    </pre>
    <p
      className="css-1eitoz7"
    >
      Run the script
    </p>
    <pre
      className="css-1spfbkh"
    >
      <button
        className="css-1wgtjha"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="css-1jsrbro"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <code
        className="language-bash css-fkp2zu"
      >
        python3 example.py
      </code>
    </pre>
  </div>
</div>
`;
